--- a/hakkında.html
+++ b/hakkında.html
@@ -30,7 +30,7 @@
 <body class="p-3 m-0 border-0 bd-example m-0 border-0">
     <ul class="nav nav-tabs">
         <li class="nav-item">
-            <a class="nav-link" href="BlogSitem.html"> Ana Sayfa </a>
+            <a class="nav-link" href="index.html"> Ana Sayfa </a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href=""> Hakkında </a>
