--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     
     <ul class="nav nav-tabs">
         <li class="nav-item">
-        <a class="nav-link" href="BlogSitem.html"> Ana Sayfa </a>
+        <a class="nav-link" href="index.html"> Ana Sayfa </a>
         </li>
         
         <li class="nav-item">
