--- a/makaleler.html
+++ b/makaleler.html
@@ -11,7 +11,20 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 
-
+    <style>
+        body {
+            background: url('kayıboyu.png') no-repeat center center fixed;
+            background-size: cover;
+        }
+        
+        .kutu {
+            background: rgba(255, 255, 255, 0.8); /* İçeriği saydam yapar */
+            padding: 20px;
+            border-radius: 10px;
+            max-width: 600px;
+            margin: 50px auto;
+        }
+    </style>
 
 <!-- Üst Kısım -->
 
