--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@
                 
         </div>
 
+        Bu Bölgeye Reklam Vermek İster  Misiniz ?
+
          <!-- Orta  Bölüm -->
         <div class="col-md-6 p-3">
             
