--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
             <h3>Bloguma Hoş Geldiniz</h3>
             <p>Aşağıdaki Butona Tıklayarak Sayfamız Hakkında İyi Veya Kötü Görüşlerinizi Bildirebilirsiniz.</p>
             <button onclick="uyari()"> Buton </button>
+            <p> Bu Bölgeye Reklam Vermek İster  Misiniz ? </p>
 
     <script>
     function uyari() 
@@ -57,7 +58,7 @@
                 
         </div>
 
-        Bu Bölgeye Reklam Vermek İster  Misiniz ?
+        
 
          <!-- Orta  Bölüm -->
         <div class="col-md-6 p-3">
