--- a/index.html
+++ b/index.html
@@ -93,6 +93,13 @@
         <!-- Sağ Bölüm -->
         <div class="col-md-3 bg-light p-3">
         <img src="profile.jpeg" width="300" height="400">
+
+            <style>
+                img {
+                    border-radius: 15px;
+                }
+
+                </style>
             
         <h5> Blogumuzun Kurucu Yöneticisi <br> Şehmus YEŞİLAĞAÇ</h5>
             
