--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
         <!-- Sağ Bölüm -->
         <div class="col-md-3 bg-light p-3">
-        <img src="profil.jpeg" width="300" height="400">
+        <img src="profile.jpeg" width="300" height="400">
 
             <style>
                 img {
