--- a/hakkında.html
+++ b/hakkında.html
@@ -78,7 +78,7 @@
             footer {
                 text-align: center;
                 padding: 10px;
-                background-color: rgb(60, 60, 60);
+                background-color: 874b0f ;
                 position: fixed;
                 bottom: 0;
                 width: 97.5%;
