--- a/makaleler.html
+++ b/makaleler.html
@@ -92,7 +92,7 @@
                 position: fixed;
                 bottom: 0;
                 width: 97.5%;
-                color: black;
+                color: white;
                 display: flex;
                 justify-content: space-between;
                 align-items: center;
