--- a/hakkında.html
+++ b/hakkında.html
@@ -82,7 +82,7 @@
                 position: fixed;
                 bottom: 0;
                 width: 97.5%;
-                color: white;
+                color: black;
                 display: flex;
                 justify-content: space-between;
                 align-items: center;
