--- a/hakkında.html
+++ b/hakkında.html
@@ -95,7 +95,7 @@
             }
 
             .sosyalmedya a {
-                color: white;
+                color: black;
                 text-decoration: none;
                 margin-top: 5px;
             }
