--- a/index.html
+++ b/index.html
@@ -46,6 +46,40 @@
             <p>Aşağıdaki Butona Tıklayarak Sayfamız Hakkında İyi Veya Kötü Görüşlerinizi Bildirebilirsiniz.</p>
             <button onclick="uyari()" class="buton"> Buraya Tıkla </button>
 
+            <hr>
+
+            <!--İnanılmaz Fonksiyon -->
+            <button class="isimgetir" onclick="rastgeleIsimSec()">Türk İslam Dünyasında Hangi Sultanım </button>
+            <hr><h5 class="rastgeleisim"></h5>
+
+            <script>
+
+            const isimler = ["Tebrikler!! Muhammed Alparslansın", "Tebrikler!! Selehattin Eyyübisin", "Tebrikler!! Osman Beysin", "Tebrikler!! Yıldırım Bayazidsin", "Tebrikler!! Emir Timursun"] ;
+
+            function  rastgeleIsimSec() {
+  
+            const rastgeleIndeks = Math.floor(Math.random() * isimler.length);
+  
+            const rastgeleIsim = isimler[rastgeleIndeks];
+ 
+            document.querySelector(".rastgeleisim").textContent = rastgeleIsim;
+            }
+
+            </script>
+            
+            <style>
+ 
+            .isimgetir{
+                    background-color: rgb(20, 150, 200);
+                    color: white;
+                    padding: 6px;
+                    border-radius: 5px;
+            }
+            .isimgetir:hover {
+                background-color: blue
+            }
+            </style>
+
             <style>
                 .buton {
                     background-color: rgb(20, 150, 200);
@@ -59,6 +93,8 @@
                     background-color: blue
                 }
             </style>
+
+
 
     <script>
     function uyari() 
