--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
             <!--İnanılmaz Fonksiyon -->
             <button class="isimgetir" onclick="rastgeleIsimSec()">Türk İslam Dünyasında Hangi Sultanım </button>
-            <hr><h5 class="rastgeleisim"></h5>
+            <br> <h5 class="rastgeleisim"></h5>
 
             <script>
 
@@ -66,7 +66,7 @@
             }
 
             </script>
-            
+            <hr>
             <style>
  
             .isimgetir{
