--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
             <!--İnanılmaz Fonksiyon -->
             <button class="isimgetir" onclick="rastgeleIsimSec()">Türk İslam Dünyasında Hangi Sultanım </button>
-            <br> <h5 class="rastgeleisim"></h5>
+            <br> <br> <h5 class="rastgeleisim"></h5>
 
             <script>
 
