--- a/makaleler.html
+++ b/makaleler.html
@@ -69,6 +69,12 @@
             <!-- Sağ Bölüm -->
             <div class="col-md-3 bg-light p-3">
                 <img src="bayrak.jpg" width="300" height="350">
+                            <style>
+                img {
+                    border-radius: 15px;
+                }
+
+                </style>
                 <h6> BAYRAKLARI BAYRAK YAPAN ÜSTÜNDEKİ KANDIR TOPRAK <br> EĞER UĞRUNDA ÖLEN VARSA VATANDIR !</h6>
 
             </div>
