--- a/makaleler.html
+++ b/makaleler.html
@@ -75,7 +75,8 @@
                 }
 
                 </style>
-                <h6> BAYRAKLARI BAYRAK YAPAN ÜSTÜNDEKİ KANDIR TOPRAK <br> EĞER UĞRUNDA ÖLEN VARSA VATANDIR !</h6>
+                <h5> Günün Sözü: </h5>
+                <p> Bayrakları bayrak yapan, üstündeki kandır. Toprak, eğer uğrunda ölen varsa vatandır !</p>
 
             </div>
         </div>
