--- a/makaleler.html
+++ b/makaleler.html
@@ -76,7 +76,7 @@
 
                 </style>
                 <h5> Günün Sözü: </h5>
-                <p> Bayrakları bayrak yapan, üstündeki kandır. Toprak, eğer uğrunda ölen varsa vatandır !</p>
+                <p> "Bayrakları bayrak yapan üstündeki kandır; toprak, eğer uğrunda ölen varsa vatandır." </p>
 
             </div>
         </div>
