--- a/makaleler.html
+++ b/makaleler.html
@@ -75,7 +75,7 @@
                 }
 
                 </style>
-                <h5> Günün Sözü: </h5>
+               <br> <h5> Günün Sözü: </h5>
                 <p> "Bayrakları bayrak yapan üstündeki kandır; toprak, eğer uğrunda ölen varsa vatandır." </p>
 
             </div>
